# document-app

./: .gitignore  README.md  index.html  package.json  svelte.config.js
electron/: .eslintrc.cjs  .prettierrc.yaml  README.md  dev-app-update.yml  electron-builder.yml  index.html  package.json  svelte.config.mjs  tsconfig.json  tsconfig.node.json
electron/.zed/: settings.json
electron/electron/: main.ts
electron/src/general/: types.ts
electron/src/main/: app.ts  dialogs.ts  filesystem.ts  index.ts  invokeEvents.ts  mainEvents.ts  menu.ts
electron/src/preload/: api.ts  index.d.ts  index.ts
electron/src/renderer/src/: interface.svelte.ts  interface.ts  main.ts
electron/src/renderer/src/components/: App.svelte  AppTitle.svelte  DragAndDrop.svelte  LoadFile.svelte  TextArea.svelte
electron/src/renderer/src/interface/: dropFile.svelte.ts  index.ts  newFile.svelte.ts  openFile.svelte.ts  quit.svelte.ts  saveFile.svelte.ts
electron/src/renderer/src/state/: app.svelte.ts  file.svelte.ts
electron/src/renderer/src/stores/: File.ts  Model.ts  file.svelte.ts  model.svelte.ts  runes.svelte.ts  store.svelte.ts
electron/src/types/: types.ts
src/: interface.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: TextArea.svelte
src/stores/: File.ts  FileModified.ts
tauri/: index.html  tsconfig.json  vite.config.js
tauri/src/: interface.ts
tauri/src-tauri/src/: main.rs
tauri/src/components/: App.svelte  LoadFile.svelte
tauri/src/stores/: File.ts  Model.ts
